--- a/src/main/webapp/navigation2.html
+++ b/src/main/webapp/navigation2.html
@@ -31,11 +31,10 @@
 	<script type="text/javascript" src="<c:url value='/js/common.js'/>"></script>
 	<ul class="navbar">
 		<li><a href="#about">회사소개</a></li>
-		<li><a href="user.do?action=insertForm">회원가입</a></li>
-		<li><a href="user.do?action=loginForm">로그인</a></li>
+		<li><a href="javascript:jsLogout()">로그아웃</a></li>
 		<li><a href="board.do?action=list">게시물</a></li>
+		<li><a href="user.do?action=list">유저관리</a></li>
 	</ul>
-	<label id="loginUsernameLabel">로그인 유저 : </label>
 
 
 
