자동 로그인/ 취미 테이블 정보로 checkbox 자동 생성/ navbar 보완

--- a/src/main/webapp/navigation.html
+++ b/src/main/webapp/navigation.html
@@ -30,12 +30,11 @@
 
 	<script type="text/javascript" src="<c:url value='/js/common.js'/>"></script>
 	<ul class="navbar">
-		<li><a href="#about">회사소개</a></li>
+		<li><a href="/miniproject1/mainpage.html">회사소개</a></li>
 		<li><a href="user.do?action=insertForm">회원가입</a></li>
 		<li><a href="user.do?action=loginForm">로그인</a></li>
 		<li><a href="board.do?action=list">게시물</a></li>
 	</ul>
-	<label id="loginUsernameLabel">로그인 유저 : </label>
 
 
 
