--- a/src/main/webapp/navigation2.html
+++ b/src/main/webapp/navigation2.html
@@ -30,9 +30,10 @@
 
 	<script type="text/javascript" src="<c:url value='/js/common.js'/>"></script>
 	<ul class="navbar">
-		<li><a href="#about">회사소개</a></li>
+		<li><a href="/miniproject1/mainpage.html">회사소개</a></li>
 		<li><a href="javascript:jsLogout()">로그아웃</a></li>
 		<li><a href="board.do?action=list">게시물</a></li>
+		<li><a href="user.do?action=mypage">마이페이지</a></li>
 		<li><a href="user.do?action=list">유저관리</a></li>
 	</ul>
 
