자잘한 버그 수정

--- a/src/main/webapp/navigation3.html
+++ b/src/main/webapp/navigation3.html
@@ -34,6 +34,7 @@
 		<li><a href="javascript:jsLogout()">로그아웃</a></li>
 		<li><a href="board.do?action=list">게시물</a></li>
 		<li><a href="user.do?action=mypage">마이페이지</a></li>
+		<li><a href="user.do?action=list">유저관리</a></li>
 	</ul>
 
 
